--- a/PiControl/templates/master.html
+++ b/PiControl/templates/master.html
@@ -36,6 +36,7 @@
           <ul>
             <li class="js-menu"><a href="/"><i class="fa fa-home"></i> <span>Dashboard</span></a> </li>
             <li class="js-menu"> <a href="{% url 'pins' %}"><i class="fa fa-map-pin"></i> <span>Pins</span></a> </li>
+            <li class="js-menu"> <a href="{% url 'schedule' %}"><i class="fa fa-calendar"></i> <span>Schedule</span></a> </li>
           </ul>
         </div>
 
