--- a/PiControl/templates/schedule/index.html
+++ b/PiControl/templates/schedule/index.html
@@ -26,33 +26,37 @@
                 </div>
 
                 <div class="widget-content nopadding">
-                    <table class="table table-striped">
-                        <thead>
-                            <tr>
-                                <th>Day</th>
-                                <th>Start</th>
-                                <th>End</th>
-                                <th>Active</th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for days in day %}
-                                <tr class="js-tr">
-                                    <td>{{ day.day_of_week }}</td>
-                                    <td>{{ day.start_at }}</td>
-                                    <td>{{ day.end_at }}</td>
-                                    <td><i class='fa fa-{{ day.active|yesno:"check,times,times" }}'></i></td>
-                                    <td>
-                                        <a class="btn btn-info" href="{% url 'schedule_edit' day.id %}"><i class="fa fa-pencil"></i></a>
-                                    </td>
-                                    <td>
-                                        <a data-id="{{ day.id }}" class="js-delete btn btn-warning"><i class="fa fa-trash"></i></a>
-                                    </td>
+
+                    {% if days.count != 0 %}
+                        <table class="table table-bordered table-striped">
+                            <thead>
+                                <tr>
+                                    <th>Day</th>
+                                    <th>Start</th>
+                                    <th>End</th>
+                                    <th>Active</th>
+                                    <th></th>
                                 </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
+                            </thead>
+                            <tbody>
+                                {% for days in day %}
+                                    <tr class="js-tr">
+                                        <td>{{ day.day_of_week }}</td>
+                                        <td>{{ day.start_at }}</td>
+                                        <td>{{ day.end_at }}</td>
+                                        <td><i class='fa fa-{{ day.active|yesno:"check,times,times" }}'></i></td>
+                                        <td>
+                                            <a class="btn btn-info" href="{% url 'schedule_edit' day.id %}"><i class="fa fa-pencil"></i></a>
+                                        </td>
+                                        <td>
+                                            <a data-id="{{ day.id }}" class="js-delete btn btn-warning"><i class="fa fa-trash"></i></a>
+                                        </td>
+                                    </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    {% endif %}
+                    
                 </div>
 
             </div>
