--- a/PiControl/templates/master.html
+++ b/PiControl/templates/master.html
@@ -32,7 +32,7 @@
           </ul>
         </div>
 
-        <div id="sidebar"><a href="#" class="visible-phone"><i class="fa fa-home"></i> Dashboard</a>
+        <div id="sidebar"><a href="#" class="visible-phone">Menu</a>
           <ul>
             <li class="js-menu"><a href="/"><i class="fa fa-home"></i> <span>Dashboard</span></a> </li>
             <li class="js-menu"> <a href="{% url 'pins' %}"><i class="fa fa-map-pin"></i> <span>Pins</span></a> </li>
