Revert "fine they in the master"
This reverts commit 85b1bf66a8b66b665bcf477b43503d4c504475a1.

--- a/PiControl/templates/schedule/create-edit.html
+++ b/PiControl/templates/schedule/create-edit.html
@@ -1,4 +1,11 @@
 {% extends 'master.html' %}
+{% load staticfiles %}
+
+{% block head %}
+
+    <link href="{% static 'css/jquery.timepicker.min.css' %}" rel="stylesheet">
+
+{% endblock %}
 
 {% block content %}
 
@@ -16,7 +23,7 @@
         <div class="span12">
             <div class="widget-box">
                 <div class="widget-title">
-                    <h5>Create Schedule</h5>
+                    <h5>Create Sechedule</h5>
                 </div>
 
                 <div class="widget-content">
@@ -39,6 +46,7 @@
                         {% endfor %}
 
                         <button type="submit" class="btn btn-info">Save</button>
+
                     </form>
 
                 </div>
@@ -52,6 +60,7 @@
 {% endblock %}
 
 {% block javascript %}
+<script src="{% static 'js/jquery.timepicker.min.js' %}"></script>
 <script>
 
     $('.js-start-at .js-end-at').timepicker({
@@ -66,7 +75,7 @@
     });
 
     $('.js-form').submit(function(e){
-        e.preventdefault();
+        e.preventdefalt();
 
         var start = $('.js-start-at').val();
         var end = $('.js-end-at').val();
