just format it diffrently on the view

--- a/PiControl/templates/schedule/create-edit.html
+++ b/PiControl/templates/schedule/create-edit.html
@@ -61,11 +61,11 @@
 <script src="{% static 'js/jquery.timepicker.min.js' %}"></script>
 <script>
     var TimePicker = {
-        timeFormat: 'h:mm p',
+        timeFormat: 'hh:mm',
         interval: 30,
         minTime: '10',
-        maxTime: '6:00pm',
-        startTime: '10:00',
+        maxTime: '10:00pm',
+        startTime: '10:00am',
         dynamic: false,
         dropdown: true,
         scrollbar: true
