--- a/PiControl/templates/schedule/create-edit.html
+++ b/PiControl/templates/schedule/create-edit.html
@@ -21,7 +21,7 @@
         <div class="span12">
             <div class="widget-box">
                 <div class="widget-title">
-                    <h5>Create Sechedule</h5>
+                    <h5>Create Schedule</h5>
                 </div>
 
                 <div class="widget-content">
