--- a/PiControl/templates/dashboard.html
+++ b/PiControl/templates/dashboard.html
@@ -61,7 +61,7 @@
         {% endif %}
 
 
-        {% if temp_control.manuel %}
+        {% if temp_control.manuel_off %}
             <button class="btn btn-block btn-danger js-manual-off" data-state="0">im sitting in the spa button Off</button>
         {% else %}
             <button class="btn btn-block btn-success js-manual-off" data-state="1">im sitting in the spa button On</button>
