--- a/PiControl/templates/schedule/index.html
+++ b/PiControl/templates/schedule/index.html
@@ -33,6 +33,7 @@
                                 <th>Day</th>
                                 <th>Start</th>
                                 <th>End</th>
+                                <th>Pin</th>
                                 <th>Active</th>
                                 <th></th>
                             </tr>
