--- a/PiControl/templates/dashboard.html
+++ b/PiControl/templates/dashboard.html
@@ -53,21 +53,6 @@
 
 <div class="container-fluid">
 
-    <div class="quick-actions_homepage">
-        {% if temp_control.manuel %}
-            <button class="btn btn-block btn-danger js-manual" data-state="0">Manual Off</button>
-        {% else %}
-            <button class="btn btn-block btn-success js-manual" data-state="1">Manual On</button>
-        {% endif %}
-
-
-        {% if temp_control.manuel_off %}
-            <button class="btn btn-block btn-danger js-manual-off" data-state="0">im sitting in the spa button Off</button>
-        {% else %}
-            <button class="btn btn-block btn-success js-manual-off" data-state="1">im sitting in the spa button On</button>
-        {% endif %}
-    </div>
-
     {% for thermometer in thermometers  %}
         <div class="row-fluid">
             <div class="span3">
@@ -86,40 +71,40 @@
         </div>
     {% endfor %}
 
-    <div class="row-fluid">
-        <div class="span12">
-            <div class="widget-box">
-                <div class="widget-title">
-                    <h5>Temperature Control</h5>
-                </div>
-                <div class="widget-content">
+    <!--<div class="row-fluid">-->
+        <!--<div class="span12">-->
+            <!--<div class="widget-box">-->
+                <!--<div class="widget-title">-->
+                    <!--<h5>Temperature Control</h5>-->
+                <!--</div>-->
+                <!--<div class="widget-content">-->
 
-                    <h3>Temp</h3>
-                    <div class="input-group number-spinner">
-                        <span class="input-group-btn data-dwn">
-                            <button class="btn btn-default btn-info" data-dir="dwn"><span class="fa fa-minus"></span></button>
-                        </span>
-                        <input type="text" class="form-control text-center js-temp" value="{{ temp_control.temp }}" min="20" max="60" data-inc="1" disabled>
-                        <span class="input-group-btn data-up">
-                            <button class="btn btn-default btn-info" data-dir="up"><span class="fa fa-plus"></span></button>
-                        </span>
-                    </div>
+                    <!--<h3>Temp</h3>-->
+                    <!--<div class="input-group number-spinner">-->
+                        <!--<span class="input-group-btn data-dwn">-->
+                            <!--<button class="btn btn-default btn-info" data-dir="dwn"><span class="fa fa-minus"></span></button>-->
+                        <!--</span>-->
+                        <!--<input type="text" class="form-control text-center js-temp" value="{{ temp_control.temp }}" min="20" max="60" data-inc="1" disabled>-->
+                        <!--<span class="input-group-btn data-up">-->
+                            <!--<button class="btn btn-default btn-info" data-dir="up"><span class="fa fa-plus"></span></button>-->
+                        <!--</span>-->
+                    <!--</div>-->
 
-                    <h3>Range</h3>
-                    <div class="input-group number-spinner">
-                        <span class="input-group-btn data-dwn">
-                            <button class="btn btn-default btn-info" data-dir="dwn"><span class="fa fa-minus"></span></button>
-                        </span>
-                        <input type="text" class="form-control text-center js-range" value="{{ temp_control.range }}" min="1" max="10" data-inc="0.5" disabled>
-                        <span class="input-group-btn data-up">
-                            <button class="btn btn-default btn-info" data-dir="up"><span class="fa fa-plus"></span></button>
-                        </span>
-                    </div>
+                    <!--<h3>Range</h3>-->
+                    <!--<div class="input-group number-spinner">-->
+                        <!--<span class="input-group-btn data-dwn">-->
+                            <!--<button class="btn btn-default btn-info" data-dir="dwn"><span class="fa fa-minus"></span></button>-->
+                        <!--</span>-->
+                        <!--<input type="text" class="form-control text-center js-range" value="{{ temp_control.range }}" min="1" max="10" data-inc="0.5" disabled>-->
+                        <!--<span class="input-group-btn data-up">-->
+                            <!--<button class="btn btn-default btn-info" data-dir="up"><span class="fa fa-plus"></span></button>-->
+                        <!--</span>-->
+                    <!--</div>-->
 
-                </div>
-            </div>
-        </div>
-    </div>
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
 
     {% if pins.count == 0 %}
         <div class="row-fluid">
