--- a/PiControl/templates/login.html
+++ b/PiControl/templates/login.html
@@ -9,6 +9,7 @@
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 	<link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}">
 	<style>
 		body{
 			background-color: #1a8fb4;
