--- a/PiControl/templates/master.html
+++ b/PiControl/templates/master.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         {% load staticfiles %}
-        <title>PiPool</title>
+        <title>PiControl</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
