--- a/PiControl/templates/dashboard.html
+++ b/PiControl/templates/dashboard.html
@@ -71,6 +71,24 @@
         </div>
     {% endfor %}
 
+    {% for pin in pins %}
+        <div class="col-md-6 col-lg-3">
+            <div class="panel text-center">
+                <div class="panel-body">
+                    <h4 class="mar-no">{{ pin.name }}</h4>
+                </div>
+
+                <div class="pad-all">
+                    <p class="text-muted">{{ pin.description }}</p>
+                    <div class="pad-btm">
+                        <button class="btn btn-success js-toggle" data-id="{{ pin.id }}"
+                                data-state="{{ pin.get_state_opposite }}">Turn {{ pin.get_state|yesno:"off,no,off" }}</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    {% endfor %}
+
     <!--<div class="row-fluid">-->
         <!--<div class="span12">-->
             <!--<div class="widget-box">-->
@@ -155,5 +173,35 @@
             $(this).text(event.strftime('%D days %H:%M:%S'));
         });
     {% endif %}
+
+    $('.js-toggle').click(function(){
+        var id = $(this).data('id');
+        var state = $(this).data('state');
+        togglePinState(id, state, this);
+    });
+
+    function togglePinState(pin, state, button){
+        var loading = "<i class='fa fa-spin fa-refresh'></i>";
+        buttonText = $(button).html();
+        $(button).html(loading).attr('disabled', true);
+        $.ajax({
+            type: "POST",
+            url: '{% url 'pin_set' %}',
+            dataType: "json",
+            data: { pin : pin, state : state, csrfmiddlewaretoken : '{{ csrf_token }}' }
+        }).done(function(data) {
+            console.log(data);
+            if(data.success){
+                buttonText = "Turn " + (data.state ? "off" : "on");
+                $(button).data('state', data.state ? 0 : 1);
+            } else {
+                alert("Oh No!! Something when wrong");
+            }
+            $(button).html(buttonText).attr('disabled', false);
+        }).fail(function(e){
+            $(button).html(buttonText).attr('disabled', false);
+            console.log("something went wrong", e);
+        });
+    }
 </script>
 {% endblock %}
