--- a/PiControl/templates/dashboard.html
+++ b/PiControl/templates/dashboard.html
@@ -82,7 +82,7 @@
                     <p class="text-muted">{{ pin.description }}</p>
                     <div class="pad-btm">
                         <button class="btn btn-success js-toggle" data-id="{{ pin.id }}"
-                                data-state="{{ pin.get_state_opposite }}">Turn {{ pin.get_state|yesno:"off,no,off" }}</button>
+                                data-state="{{ pin.get_state_opposite }}">Turn {{ pin.get_state|yesno:"off,on,off" }}</button>
                     </div>
                 </div>
             </div>
