--- a/PiControl/templates/master.html
+++ b/PiControl/templates/master.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         {% load staticfiles %}
-        <title>PiControl</title>
+        <title>Pi Controller</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
@@ -16,7 +16,7 @@
     </head>
     <body>
         <div id="header">
-          <h1><a href="/">PiPool</a></h1>
+          <h1><a href="/">Pi Controller</a></h1>
         </div>
 
         <div id="user-nav" class="navbar navbar-inverse">
